src/objects/Account/fields/Customer_Industry_deprecated__c.field-meta.xml
<CustomField>
    <fullName>Customer_Industry_deprecated__c</fullName>
    <label>Customer Industry-deprecated</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Customer_Industry</valueSetName>
    </valueSet>
</CustomField>