src/objects/Account/fields/Delivery_Terms__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Terms__c</fullName>
    <description>Use to set the standard delivery terms for a customer.</description>
    <inlineHelpText>Use to set the standard delivery terms for a customer. Copied to the Delivery Terms field on the Quote.</inlineHelpText>
    <label>Standard Delivery Terms</label>
    <length>255</length>
    <type>Text</type>
</CustomField>