src/objects/Account/fields/Derived_Region_formula__c.field-meta.xml
<CustomField>
    <fullName>Derived_Region_formula__c</fullName>
    <description>This replaces the old derived region picklist</description>
    <formula>IF(NOT(ISBLANK(ParentId)),TEXT(Group_Level_Region__c ),&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Derives from the group level region from the parent global parent account</inlineHelpText>
    <label>Derived Region</label>
    <type>Text</type>
</CustomField>