src/objects/Account/fields/Key_Account_Formula__c.field-meta.xml
<CustomField>
    <fullName>Key_Account_Formula__c</fullName>
    <description>derived from key account on the parent account</description>
    <formula>IF( NOT(ISBLANK(ParentId)), Parent.Key_Account__c, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Derived from the Key Account field from the parent</inlineHelpText>
    <label>Key Account</label>
    <type>Checkbox</type>
</CustomField>