src/objects/Account/fields/Ultimate_Parent_Updated__c.field-meta.xml
<CustomField>
    <fullName>Ultimate_Parent_Updated__c</fullName>
    <formula>IF( Parent.Global_Parent_Updated__c = True, Global_Parent_Updated__c , IF( Parent.Parent.Global_Parent_Updated__c = True , Parent.Global_Parent_Updated__c  , IF( Parent.Parent.Parent.Global_Parent_Updated__c = True , Parent.Parent.Global_Parent_Updated__c  ,IF( Parent.Parent.Parent.Parent.Global_Parent_Updated__c = True, Parent.Parent.Parent.Global_Parent_Updated__c  ,IF( Parent.Parent.Parent.Parent.Parent.Global_Parent_Updated__c = True, Parent.Parent.Parent.Parent.Global_Parent_Updated__c ,IF( Parent.Parent.Parent.Parent.Parent.Parent.Global_Parent_Updated__c = True, Parent.Parent.Parent.Parent.Parent.Global_Parent_Updated__c ,False))) ) ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ultimate Parent Updated</label>
    <type>Checkbox</type>
</CustomField>