src/objects/Account/recordTypes/Account.recordType-meta.xml
<RecordType>
    <fullName>Account</fullName>
    <active>true</active>
    <description>Customer Accounts</description>
    <label>Customer Account</label>
</RecordType>