src/objects/Account/recordTypes/Distributor_Rep_Account.recordType-meta.xml
<RecordType>
    <fullName>Distributor_Rep_Account</fullName>
    <active>false</active>
    <label>Distributor/Rep Account</label>
</RecordType>