src/objects/Account/recordTypes/External_Account.recordType-meta.xml
<RecordType>
    <fullName>External_Account</fullName>
    <active>true</active>
    <label>External Account</label>
</RecordType>