src/objects/Account/recordTypes/Global_Parent.recordType-meta.xml
<RecordType>
    <fullName>Global_Parent</fullName>
    <active>true</active>
    <label>Global Parent</label>
</RecordType>