src/objects/Account/recordTypes/Party_Account.recordType-meta.xml
<RecordType>
    <fullName>Party_Account</fullName>
    <active>true</active>
    <description>Top level party, rep Accounts</description>
    <label>Top Level Account</label>
</RecordType>