src/objects/Account/recordTypes/Site.recordType-meta.xml
<RecordType>
    <fullName>Site</fullName>
    <active>true</active>
    <description>Site &amp; Address details of an Account</description>
    <label>Site</label>
</RecordType>