src/objects/Account/validationRules/Account_Owner.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_Owner</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISCHANGED(OwnerId), NOT( $Permission.Change_Ownership ))</errorConditionFormula>
    <errorMessage>You are not permitted to change the account owner.</errorMessage>
</ValidationRule>