src/objects/Account/validationRules/Do_not_allow_edit.validationRule-meta.xml
<ValidationRule>
    <fullName>Do_not_allow_edit</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
AND(
NOT($Permission.By_Pass_Validation),
NOT(ISBLANK(Source_System_Id__c)),
TEXT(Type)=&quot;Customer&quot;,
!ISCHANGED(Type),
!ISCHANGED(Source_System_Id__c)
),
OR(
ISCHANGED(Name),
ISCHANGED(Account_Sales_Rep__c),
ISCHANGED(Account_Sales_Rep__c),
ISCHANGED(Type),
ISCHANGED(AdvMat_Unique_Customer_Code__c),
ISCHANGED(AR_Amount__c),
ISCHANGED( Billing_Region__c),
ISCHANGED( OwnerId ),
ISCHANGED( BillingStreet ),
ISCHANGED( BillingCity ),
ISCHANGED( BillingCountry ),
ISCHANGED( BillingPostalCode ),
ISCHANGED( BillingState ),
ISCHANGED( Buy_Location__c ),
ISCHANGED( Company_number__c ),
ISCHANGED( Credit_Limit__c ),
ISCHANGED( Cust_Site_Id__c ),
ISCHANGED( Customer_Warranty__c ),
ISCHANGED( Default_IncoTerms__c ),
ISCHANGED( Default_Named_Place__c ),
ISCHANGED( Default_Ship_Method__c ),
ISCHANGED( Default_Shipping_Comments__c ),
ISCHANGED( Department__c ),
ISCHANGED( EC__c ),
ISCHANGED( End_Customer_Number__c ),
ISCHANGED( Fax ),
ISCHANGED( Location_Number__c ),
ISCHANGED( Oracle_Description__c ),
ISCHANGED( Location_Number__c ),
ISCHANGED( Oracle_Party_Id__c ),
ISCHANGED( Org_ID__c ),
ISCHANGED( Org_Name__c ),
ISCHANGED( Party_Number__c ),
ISCHANGED( Payment_Terms__c ),
ISCHANGED( Phone ),
ISCHANGED( Price_List__c ),
ISCHANGED( RecordTypeId ),
ISCHANGED( Glovia_Region_Country__c ),
ISCHANGED( Glovia_Region_State__c ),
ISCHANGED( RSM__c ),
ISCHANGED( Sales_Channel_Code__c ),
ISCHANGED( Sales_Channel_Display_Code__c ),
ISCHANGED( Sales_Rep_Full_Name__c ),
ISCHANGED( Sales_Type__c ),
ISCHANGED( Ship_Territory__c ),
ISCHANGED( Ship_to_Location_Name_Address__c ),
ISCHANGED( ShippingStreet ),
ISCHANGED( ShippingCity ),
ISCHANGED( ShippingCountry ),
ISCHANGED( ShippingStreet ),
ISCHANGED( ShippingPostalCode ),
ISCHANGED( ShippingState ),
ISCHANGED( Site_Use_Code__c ),
ISCHANGED( Site_Use_Id__c ),
ISCHANGED( Site_Use_Status__c ),
ISCHANGED( Source_System__c ),
ISCHANGED( Source_System_Id__c ),
ISCHANGED( Derived_Region__c ),
ISCHANGED( Group_Level_Region__c ),
ISCHANGED( II_VI_Revenue__c ),
ISCHANGED( Status__c ),
ISCHANGED( Taxable__c ),
ISCHANGED( Website ),
ISCHANGED( CurrencyIsoCode ),
ISCHANGED( ParentId ),
ISCHANGED( Account_Name_Chinese__c )
)
)</errorConditionFormula>
    <errorMessage>Once the source system is populated, and the Account Type is set to Customer, you cannot update any Account fields</errorMessage>
</ValidationRule>