src/objects/Account/validationRules/Only_Prospect_Accounts.validationRule-meta.xml
<ValidationRule>
    <fullName>Only_Prospect_Accounts</fullName>
    <active>true</active>
    <description>only prospect accounts can be created</description>
    <errorConditionFormula>AND(
ISNEW(),
TEXT(Type)=&quot;Prospect&quot;,
NOT( $Permission.By_Pass_Validation)
)</errorConditionFormula>
    <errorDisplayField>Type</errorDisplayField>
    <errorMessage>You can only create Customer Accounts</errorMessage>
</ValidationRule>