src/objects/Account/validationRules/Only_Top_Level_Account_can_be_created.validationRule-meta.xml
<ValidationRule>
    <fullName>Only_Top_Level_Account_can_be_created</fullName>
    <active>true</active>
    <description>Only Top Level Accounts can be created by Sales Admin</description>
    <errorConditionFormula>AND( 
CONTAINS( $UserRole.Name , &apos;Sales Admin&apos;), 
OR( 
AND( 
ISNEW(), 
RecordType.DeveloperName &lt;&gt; &apos;Party_Account&apos;),
NOT((ISBLANK(ParentId))), 
AND( 
NOT(ISCHANGED(Total_Next_12_Months_Revenue_of_Oppty__c)),
NOT(ISCHANGED(Sum_of_Opty_Revenue_Amount__c)),
NOT(ISCHANGED(Sum_of_Expected_Revenue__c)),
RecordType.DeveloperName = &apos;Party_Account&apos;, 
Text(Type) &lt;&gt; &apos;Party&apos; 
) 
) 
)</errorConditionFormula>
    <errorMessage>Sales Admin Can only Create A Top Level Account and Type should be Party only Account</errorMessage>
</ValidationRule>