src/objects/Account/validationRules/Shipping_Country_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Shipping_Country_Required</fullName>
    <active>true</active>
    <errorConditionFormula>ShippingCountry = &quot;&quot;</errorConditionFormula>
    <errorDisplayField>ShippingCountry</errorDisplayField>
    <errorMessage>You must enter a valid 2 digit ISO code for the Shipping Country.</errorMessage>
</ValidationRule>