src/objects/Account/validationRules/Site_Address_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Site_Address_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
RecordType.DeveloperName  = &apos;Site&apos;, 
AND(ISBLANK( ShippingCity ),ISBLANK( ShippingCountry ),
ISBLANK(   ShippingState ),ISBLANK(    ShippingPostalCode ),
ISBLANK(     ShippingStreet )

 ))</errorConditionFormula>
    <errorMessage>Please enter  Shipping Address</errorMessage>
</ValidationRule>