src/objects/Account/validationRules/Source_System_cannot_be_null.validationRule-meta.xml
<ValidationRule>
    <fullName>Source_System_cannot_be_null</fullName>
    <active>false</active>
    <description>Source System cannot be null if Source System Id is not null.</description>
    <errorConditionFormula>AND(NOT(ISBLANK(Source_System_Id__c)),ISPICKVAL(Source_System__c, &quot;&quot;))</errorConditionFormula>
    <errorDisplayField>Source_System__c</errorDisplayField>
    <errorMessage>Source System cannot be null</errorMessage>
</ValidationRule>