src/objects/Account/validationRules/Valid_US_BillingState.validationRule-meta.xml
<ValidationRule>
    <fullName>Valid_US_BillingState</fullName>
    <active>false</active>
    <errorConditionFormula>AND(BillingCountry = &quot;US&quot;, NOT( CONTAINS(&quot;AL:AK:AZ:AR:CA:CO:CT:DE:DC:FL:GA:HI:ID:&quot; &amp;
&quot;IL:IN:IA:KS:KY:LA:ME:MD:MA:MI:MN:MS:MO:MT:NE:NV:NH:&quot; &amp;
&quot;NJ:NM:NY:NC:ND:OH:OK:OR:PA:PR:RI:SC:SD:TN:TX:UT:VT:VA:&quot; &amp;
&quot;WA:WV:WI:WY&quot;, BillingState)),

TEXT($User.Legacy_Company__c )=&quot;Corp II-VI&quot;
)</errorConditionFormula>
    <errorDisplayField>BillingState</errorDisplayField>
    <errorMessage>Please enter a valid US state in the Billing State field.</errorMessage>
</ValidationRule>