src/objects/Account/listViews/Accounts_by_source_system.listView-meta.xml
<ListView>
    <fullName>Accounts_by_source_system</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.SITE</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Source_System__c</field>
        <operation>equals</operation>
        <value>Glovia</value>
    </filters>
    <label>Accounts by source system</label>
</ListView>