src/objects/Account/listViews/All_Key_Accounts.listView-meta.xml
<ListView>
    <fullName>All_Key_Accounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.SITE</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Key_Account__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>All Key Accounts</label>
</ListView>