src/objects/Account/listViews/Distributor_Rep_Accounts.listView-meta.xml
<ListView>
    <fullName>Distributor_Rep_Accounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>ACCOUNT.RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.TYPE</field>
        <operation>equals</operation>
        <value>Partner,Reseller</value>
    </filters>
    <label>Distributor/Sales Rep Accounts</label>
</ListView>