src/objects/Account/listViews/Org_Account_Hierarchy.listView-meta.xml
<ListView>
    <fullName>Org_Account_Hierarchy</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.RECORDTYPE</columns>
    <columns>Customer_Warranty__c</columns>
    <columns>ACCOUNT.SITE</columns>
    <columns>Site_Use_Code__c</columns>
    <columns>ACCOUNT.IS_PARNTER</columns>
    <columns>Site_Use_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>Org_Account_Hierarchy</label>
</ListView>